--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             width: 80%;
             margin: auto;
             overflow: hidden;
-            padding: 20px;
+            padding: 60px;
         }
         .highlight {
             background-color: rgb(119, 115, 115);
@@ -56,7 +56,7 @@
             background-color: #333;
             color: rgb(107, 93, 93);
             text-align: center;
-            padding: 1rem;
+            padding: 0,1rem;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -88,6 +88,7 @@
             <h3>Ana Santos: Moda Sustentável do Campo</h3>
             <p>Ana criou uma marca de moda que utiliza técnicas tradicionais de tecelagem rural para produzir roupas modernas e sustentáveis para o público urbano.</p>
         </div>
+        <img src="rural.jpeg">
     </div>
     <footer>
         <p>&copy; 2024 Empreendedorismo Rural-Urbano. Todos os direitos reservados.</p>
